controlStatment/exercise/program14
program14.c:7:8: warning: multi-character character constant [-Wmultichar]
    7 |                 case '10':
      |                      ^
program14.c:9:4: error: 'continue' statement not in loop statement
    9 |                         continue;
      |                         ^
program14.c:10:8: warning: multi-character character constant [-Wmultichar]
   10 |                 case '15':
      |                      ^
program14.c:11:8: warning: multi-character character constant [-Wmultichar]
   11 |                 case '20':
      |                      ^
3 warnings and 1 error generated.
